# vesper

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  dev.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
jasonsproject/: outline.json
jasonsproject/jasonsproject/chapters/: untitled.md
src/vesper/: __init__.py  app.py  main.py  screens.py  styles.tcss
src/vesper/components/: file_list.py  quick_open_panel.py
src/vesper/models/: document.py  task.py
src/vesper/screens/: __init__.py  board.py  configs.py  editor.py  file_tree.py  milestone_prompt.py  outliner.py  path_prompt.py  project_picker.py  quick_open.py  stats.py  tasks.py
src/vesper/services/: file_service.py  git.py  paths.py  settings.py
tests/: conftest.py  test_document_model.py  test_editor_view.py  test_models.py  test_task_list.py
